lander.lessons.lander.lvl3_fly_the_lander.FlyTheLander.scala.error
Lander:5: error: type mismatch;
 found   : java.util.List[lessons.lander.universe.Point]
 required: scala.collection.immutable.List[lessons.lander.universe.Point]
  	val liste:List[Point]=getSol()
                                    ^